Fixed lecture explorer height and scrollbar, page height Adresses #46: Lecture explorer scrollbar is now visible. Explorer no longer grows when lectures are opened. Page height is fixed so the scrollbar only appears when needed

--- a/styles/sass/base/_variables.scss
+++ b/styles/sass/base/_variables.scss
@@ -13,18 +13,15 @@ $header-height: 50px;
 $footer-height: 30px;
 $header-bottom-line: $header-height / 5;
 $lecture-schedule-combination-controller-height: 100px;
-$lecture-schedule-max-height: 680px;
-$lecture-schedule-min-height: 560px;
+$lecture-schedule-height: 560px;
 $lecture-schedule-basis: 460px;
 $lecture-schedule-padding-top: 40px;
 $lecture-schedule-padding-bottom: 40px;
-$lecture-explorer-max-height: $lecture-schedule-max-height;
-$lecture-explorer-min-height: $lecture-schedule-min-height;
+$lecture-explorer-height: $lecture-schedule-height;
 $lecture-explorer-basis: 300px;
 $lecture-explorer-plan-buttons-height: 25px;
 $lecture-explorer-plans-height: $lecture-schedule-combination-controller-height;
 $flex-spacer-basis: 4px;
-$page-min-height: $header-height + $header-bottom-line + 2 * $main-padding + $lecture-schedule-min-height + $footer-height;
 
 // Header
 $header-spacing: 12px;
